# TranscriptionLoadBalacing

./: .gitignore  Dockerfile  Pipfile  README.md  core.py  docker-compose-dev.yaml  docker-compose.yaml  main.py  open-ai-whisper.py  redis_streams.py  requirements.txt  scribe.py  start.py  test.md  test_main.py  test_worker.py  translations.py  translations_spanish.py  worker.py  worker2.py
downloader/: Dockerfile  downloader.py  main.py  playlist.py  pyproject.toml
frontend/: config.toml
job-handler/: .gitignore  package-lock.json  package.json
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
results/: Distinctives of a Fully-Functioning Church, Part 3 - 1 Thessalonians 5:19-22.md  GraceLife London.md  Problems with Corrupt Authorities part 1- Titus 31-2.md  The Elders' Job Description： Understanding Biblically What Elders Should Be Doing Pt 2 - Bible Study.md  The Elders' Job Description： Understanding Biblically What Elders Should Be Doing, Pt 1 -Bible Study.md  mike-medium.txt  mike-small.txt  mike.txt  “The Faithful Servant’s Hospitality” - Titus 1_7-8.md  ＂Being Above Reproach＂ - Titus 1_6.md  ＂Choosing a Teacher＂ - Titus 1_9.md  ＂Church in a World Gone Mad＂ - Titus 1_1-4.md  ＂Elders, and Why You Need Them＂ - Titus 1_5, 10-11.md  ＂Faithful Children＂ - Titus 1_6-7.md  ＂Faithful Fathers＂ - Titus 1_6-7.md  ＂Faithful” or “Believing” in Titus 1_6？  Midweek Study.md  ＂Faithful” or “Believing” in Titus 1_6？ Q&A Session after the Midweek Study.md  ＂Finding Someone Faithful＂ - Titus 1_6.md  ＂Silencing Fools and Wolves＂ - Titus 1_12-16.md  (+3 more)
the-whisper-cpp/: Dockerfile  audio_files.py  main.py  pyproject.toml
(+46 files in other folders)
