[tool.poetry]
name = "whisper-nats"
version = "0.1.0"
description = "connects to NATS and then does transcription jobs"
authors = ["Your Name <you@example.com>"]
license = "AGPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
