[tool.poetry]
name = "whisper-nats"
version = "0.1.0"
description = "connects to NATS and then does transcription jobs"
authors = ["Your Name <you@example.com>"]
license = "AGPL3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
whispercpp = "^0.0.17"
nats-py = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
